# template

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.config  docker-compose-dev.yml  docker-compose-gha.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-pre-commit.txt  requirements.txt  setup.cfg
.github/workflows/: docker_tests.yaml  pre-commit.yaml  tests.yaml  unittests.yaml
requirements/: dev.in  dev.txt  prod.in  prod.txt
src/package_one/: __init__.py
src/package_one/sanity/: __init__.py  example.py
src/package_two/: __init__.py
src/package_two/sanity/: __init__.py  example.py
src/template/: __init__.py  example.py
src/template/sanity/: __init__.py  example.py
src/template_duplicate/: __init__.py  example.py
src/template_duplicate/sanity/: __init__.py  example.py
src/template_one/: __init__.py
src/template_one/sanity/: __init__.py
src/template_package_one/: __init__.py
src/template_package_one/sanity/: __init__.py  example.py
src/template_package_two/: __init__.py
src/template_package_two/sanity/: __init__.py  example.py
src/template_two/: __init__.py
src/template_two/sanity/: __init__.py
template/: README.md  pyproject.toml  setup.cfg
template/template/: __init__.py  __meta__.py  example.py
template/template/tests/: test_sanity.py
tests/package_one/sanity/: test_example.py
tests/package_two/sanity/: test_example.py
tests/template/: test_example.py  test_numpy.py
tests/template/sanity/: test_example.py
tests/template_duplicate/: test_example.py  test_numpy.py  test_sanity.py
tests/template_duplicate/sanity/: test_example.py
tests/template_one/sanity/: test_example.py
tests/template_package_one/sanity/: test_example.py
tests/template_package_two/sanity/: test_example.py
tests/template_two/sanity/: test_example.py
