[tool.poetry]
name = "template"
version = "0.1.0"
description = "Repository template for starting python projects"
authors = ["pawngrubber <pawngrubber@gmail.com>"]
readme = "README.md"
packages = [
    {include = "template_package_one", from = "src"},
    {include = "template_package_two", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.12"
chess = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
identify = "*"
mypy = "*"
pytest = "*"
poetry-plugin-export = "*"


[tool.poetry.group.pre-commit.dependencies]
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
