[project]
name = "template"
version = "0.1.0"
description = "Repository template for starting python projects"
authors = [{ name = "pawngrubber", email = "pawngrubber@gmail.com" }]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = ["chess", "numpy"]

[build-system]
requires = ["uv_build>=0.7.18,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff", "ty", "pytest"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ['B', 'C4', 'ISC', 'A', 'N', 'I', 'PGH']
ignore = ["E402", "ISC001"]

[tool.ruff.format]
quote-style = "double"
