[metadata]
name = template
version = 0.0.1
author = pawngrubber
author_email = pawngrubber@gmail.com
description = Template of repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pawngrubber/template
project_urls =
    Bug Tracker = https://github.com/pawngrubber/template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .
