[metadata]
name = template
version = 0.0.1
description = Template of repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pawngrubber/template
author = pawngrubber
author_email = pawngrubber@gmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/pawngrubber/template/issues

[options]
packages = find:
python_requires = >=3.10
package_dir =
    = src

[options.packages.find]
where = src
