[metadata]
name = template
version = 0.0.1
author = Paul Terwilliger
author_email = paul.terwilliger@chess.com
description = Template of repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChessCom/stat-research/tree/master/projects/template
project_urls =
    Bug Tracker = https://github.com/ChessCom/stat-research/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
